<resources>
    <string name="app_name">WeatherLoggerApp</string>

    <!-- Common strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success">Success</string>
    <string name="temperature">Temperature</string>
    <string name="description">Description</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="city">City</string>
    <string name="saved">Saved!</string>
    <string name="country">Country</string>

    <!-- Weather Descriptions -->
    <string name="clear_sky">clear sky</string>
    <string name="few_clouds">few clouds</string>
    <string name="scattered_clouds">scattered clouds</string>
    <string name="broken_clouds">broken clouds</string>
    <string name="shower_rain">shower rain</string>
    <string name="rain">rain</string>
    <string name="thunderstorm">thunderstorm</string>
    <string name="snow">snow</string>
    <string name="mist">mist</string>

    <string name="hpa">%1$d hPa</string>
    <string name="m_per_sec">%1$d m/sec</string>

    <!-- Request permission screen -->
    <string name="weather_logger">WEATHER LOGGER</string>
    <string name="allow_location_and_gps">For the application to work, please allow location and the Internet usage</string>

    <!-- Main Screen -->
    <string name="your_city_placeholder">Your city</string>

    <string name="current_temperature">%1$d°C</string>
    <string name="current_time_placeholder">10:07</string>
    <string name="current_temperature_description_placeholder">Rain</string>
    <string name="weather_now">Weather now</string>
    <string name="time">Time</string>
    <string name="save">SAVE</string>
    <string name="locations">LOCATIONS</string>
    <string name="map">MAP</string>
    <string name="all_savings">ALL SAVINGS</string>
    <string name="other_places">Other places</string>
    <string name="last_saving_date_placeholder">02.11.2018</string>
    <string name="last_saving_city_placeholder">London</string>
    <string name="last_saving_time_placeholder">18:06</string>
    <string name="last_saving_weather_description_placeholder">Sunny, 7°C</string>
    <string name="last_saving_weather_description">%1$s, %2$d°C</string>

    <!-- Map Screen -->
    <string name="save_location">Save Location</string>
    <string name="remove_saving">Remove Saving</string>

    <!-- Select locations list -->
    <string name="select_city">Type to find city you want to save</string>
    <string name="confirm_saving">Add %1$s to saved locations?</string>

    <!-- Savings screen -->
    <string name="dummy_time">08:17:22</string>
    <string name="dummy_temperature">10°C</string>

    <!-- Confirmation Dialog -->
    <string name="delete_saving_question">Delete saving?</string>

    <!-- Errors -->
    <string name="internet_disabled">Cannot update weather: Internet disabled on device</string>
    <string name="location_disabled">Cannot update weather: Location disabled on device</string>
    <string name="cant_update_weather_unknown_issue">Cannot update weather: Unknown issue. Please try again later.</string>
    <string name="title_activity_maps">Map</string>

</resources>