<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/unit_2"
    app:cardCornerRadius="@dimen/unit_4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/last_saving_date"
            style="@style/common_blue_text_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_4"
            android:text="@string/last_saving_date_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/last_saving_city"
            style="@style/common_blue_text_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_4"
            android:text="@string/last_saving_city_placeholder"
            app:layout_constraintBottom_toBottomOf="@id/last_saving_date"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/last_saving_time"
            style="@style/common_blue_text_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/unit_4"
            android:text="@string/last_saving_time_placeholder"
            app:layout_constraintBottom_toBottomOf="@id/last_saving_date"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/last_saving_weather_description"
            style="@style/common_text_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_2"
            android:layout_marginBottom="@dimen/unit_2"
            android:text="@string/last_saving_weather_description_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_saving_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>