<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/unit_2"
    app:cardCornerRadius="@dimen/unit_4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/weather_now_header"
            style="@style/common_text_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_2"
            android:text="@string/weather_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_now_current_temperature"
            style="@style/common_blue_text_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_2"
            android:text="@string/current_temperature_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_now_header" />

        <ImageView
            android:id="@+id/weather_now_current_weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_rain"
            app:layout_constraintBottom_toBottomOf="@id/weather_now_current_temperature"
            app:layout_constraintEnd_toStartOf="@id/weather_now_current_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/weather_now_current_temperature" />

        <TextView
            android:id="@+id/weather_now_current_time"
            style="@style/common_blue_text_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time_placeholder"
            app:layout_constraintBottom_toBottomOf="@id/weather_now_current_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weather_now_current_temperature"
            app:layout_constraintTop_toTopOf="@id/weather_now_current_temperature" />

        <TextView
            android:id="@+id/temperature"
            style="@style/common_text_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_2"
            android:layout_marginBottom="@dimen/unit_2"
            android:text="@string/temperature"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_now_current_temperature" />

        <TextView
            android:id="@+id/weather_now_weather_description"
            style="@style/common_text_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_2"
            android:text="@string/current_temperature_description_placeholder"
            app:layout_constraintEnd_toEndOf="@id/weather_now_current_weather_icon"
            app:layout_constraintStart_toStartOf="@id/weather_now_current_weather_icon"
            app:layout_constraintTop_toBottomOf="@id/weather_now_current_weather_icon" />

        <TextView
            style="@style/common_text_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            app:layout_constraintBottom_toBottomOf="@id/temperature"
            app:layout_constraintEnd_toEndOf="@id/weather_now_current_time"
            app:layout_constraintStart_toStartOf="@id/weather_now_current_time"
            app:layout_constraintTop_toTopOf="@id/temperature" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

