<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/unit_9"
    app:cardElevation="@dimen/unit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlue">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_4"
            android:src="@drawable/ic_info_page_pointer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/city_name"
            style="@style/city_name_on_map_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_4"
            android:layout_marginTop="@dimen/unit_2"
            android:layout_marginEnd="@dimen/unit_4"
            android:text="@string/city"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_icon" />

        <TextView
            android:id="@+id/country_name"
            style="@style/country_name_on_map_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_4"
            android:layout_marginTop="@dimen/unit"
            android:layout_marginEnd="@dimen/unit_4"
            android:text="@string/country"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weather_description_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_4"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_name"
            tools:itemCount="6"
            tools:listitem="@layout/v_information_item" />

        <Button
            android:id="@+id/save_location_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_8"
            android:layout_marginBottom="@dimen/unit_4"
            android:background="@drawable/blue_button_with_ripple_effect"
            android:text="@string/save_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_description_recycler"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/remove_location_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_8"
            android:layout_marginBottom="@dimen/unit_4"
            android:background="@drawable/red_button_with_ripple_effect"
            android:text="@string/remove_saving"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_description_recycler"
            app:layout_constraintWidth_percent="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

